# fossfox

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
data/: SAMPLE_COMPANY_TEMPLATE.json  locations.tmp  positions.json  positions.tmp  tech.json  tech.tmp
data/companies/a/: airbyte-com.json  anyscale.json  apitable.json  appsmith.json  appwrite.json  arduino.json  automattic.json  ava-labs.json
data/companies/b/: baserow.json  bitwarden.json  bluesky.json  brave.json
data/companies/c/: calcom.json  canonical.json  carto.json  chatwoot.json  clearml.json  clickhouse-com.json  cloudflare.json  cloudquery-io.json  coder.json  comma.json  crate.json  crowdsec-net.json
data/companies/d/: dbt-labs.json  deepset-ai.json  dydx.json
data/companies/f/: firezone.json  flashbots.json  flow.json  formance.json  foxglove.json
data/companies/g/: genie.json  ghost.json  gitlab.json  gradle.json  grafana-labs.json  graylog2.json
data/companies/h/: hasura-io.json  heroiclabs.json  highlight-io.json  hiro.json  hugging-face.json
data/companies/i/: influxdata.json  instill-ai.json  iron-fish.json
data/companies/j/: jetbrains.json
data/companies/k/: konghq.json
data/companies/l/: lago.json  lightdash.json  lightning.json  loft-sh.json
data/companies/m/: massa-labs.json  matomo.json  medplum.json  meltano-com.json  metabase.json  mindsdb-com.json  mongodb-com.json
data/companies/n/: nango.json  nebuly.json  neon.json  netflix.json
data/companies/o/: offchainlabs.json  openai.json  openzeppelin.json  oplabs.json  oven.json
data/o/: openai.json
src/: app.rs  common.rs  main.rs  utils.rs  wizard.rs
(+39 files in other folders)
