[package]
name = "fossfox"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std", "serde"] }
console = "0.15.7"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
email_address = "0.2.4"
eyre = "0.6.8"
glob = "0.3.1"
serde = { version = "1.0.163", features = ["serde_derive"] }
serde_json = "1.0.96"
slugify = "0.1.0"
thiserror = "1.0.40"
url = "2.4.0"
