[package]
name = "fossfox"
description = "Fossfox wizard CLI to manage data."
repository = "https://github.com/fossfox-com/fossfox"
homepage = "https://fossfox.com"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["jobs", "open-source", "fossfox"]

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.3.11", features = ["derive"] }
console = "0.15.7"
derive_more = "0.99.17"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
email_address = "0.2.4"
eyre = "0.6.8"
glob = "0.3.1"
serde = { version = "1.0.171", features = ["serde_derive"] }
serde_json = "1.0.102"
slugify = "0.1.0"
url = "2.4.0"
